libreoffice (4:7.6.3~rc2-2) UNRELEASED; urgency=medium

  * debian/control.ure.in:
    - make ure-java actutally Architecture: %OOO_JAVA_ARCHS% 
  * debian/rules:
    - support nogir build profile; add gir1.2-gdk-3.0-dev <!nogir>,
      gir1.2-gdkpixbuf-2.0-dev <!nogir> to BUILD_DEPS as dh_girepository
      says
  * debian/control.gtk3.in: add Build-Profiles: <!nogir> 

 -- Rene Engelhard <rene@debian.org>  Sat, 18 Nov 2023 10:32:14 +0100

libreoffice (4:7.6.3~rc2-1) experimental; urgency=medium

  * New upstream release candidate

  * debian/control*in:
    - add missing Build-Profiles: <!nopython>
    - add missing Build-Profiles: <!nojava>
  * debian/rules:
    - disable Java on ppc64el, s390x and armhf. Java bridge broken,
      works without Java
    - fix/improve no-Java builds:
      + don't try to install dbreport config modules into
        -uiconfig-report-builder if the report builder is disabled
      + switch OOO_BASE_ARCHS/OOO_REPORTBUILDER_ARCHS variables
        (build base on all architectures instead of Java architectures
        and report-builder-* only on archs where Java is enabled, not on
        "all base archs"); there's -sdbc-{mysql,postgresql,firebird} anyway
      + don't try to build Jar_{OOoRunner,test,ConnectivityTools} if Java is
        disabled as an extra safety net (instead of checking for junit only)
    - remove riscv64 from OOO_CHECK_ARCHS to run only the "smoketest tests"
    - bump libcmis build-dep to >= 0.6.1 
    - build against libcurl4-openssl-dev instead of gnutls

 -- Rene Engelhard <rene@debian.org>  Fri, 17 Nov 2023 07:05:17 +0100

libreoffice (4:7.6.3~rc1-2) experimental; urgency=medium

  * debian/rules:
    - readd fonts-crosextra-caladea build-dep; Cambria usage is back
  * debian/control.in:
    - duplicate Replaces: as Breaks: in -uiconfig-* (closes: #1055267)

 -- Rene Engelhard <rene@debian.org>  Fri, 03 Nov 2023 17:59:51 +0100

libreoffice (4:7.6.3~rc1-1) experimental; urgency=medium
