@@ -7,6 +7,12 @@ libreoffice (4:7.6.3~rc2-2) UNRELEASED; urgency=medium
       gir1.2-gdkpixbuf-2.0-dev <!nogir> to BUILD_DEPS as dh_girepository
       says
   * debian/control.gtk3.in: add Build-Profiles: <!nogir> 
+  * debian/tests/control*in: update for no-Java builds
+    - split testtools-bridgetest into with-java/without-java variants
+    - add new %OOO_JAVA_AND_NOGUI_ARCHS%
+    - make test-extensions-*, odk-build-examples-java
+      Architecture: %OOO_JAVA_AND_NOGUI_ARCHS%
+    - make sdk-complete %OOO_JAVA_ARCHS%
 
  -- Rene Engelhard <rene@debian.org>  Sat, 18 Nov 2023 10:32:14 +0100
 
